--- a/src/definitions/modules/calendar.less
+++ b/src/definitions/modules/calendar.less
@@ -55,16 +55,35 @@
 
 .ui.calendar .ui.table.year,
 .ui.calendar .ui.table.month,
+.ui.calendar .ui.table.hour,
 .ui.calendar .ui.table.minute {
   min-width: 15em;
+}
+
+.ui.calendar .ui.table.minute,
+.ui.calendar .ui.table.hour {
+  thead > tr > th {
+    border-bottom: none;
+    padding-bottom: 0;
+  }
 }
 
 .ui.calendar .ui.table.day {
   min-width: 18em;
 }
 
-.ui.calendar .ui.table.hour {
-  min-width: 20em;
+.ui.calendar .ui.table .time-header {
+  background-color: @offWhite;
+  font-weight: bold;
+
+  span { padding: 0 0.1em; }
+  b {
+    margin: 0 1px;
+    padding: 0.15em 0.2em;
+    border-radius: 0.15em;
+    background-color: @white;
+    border: 1px solid @focusedFormBorderColor;
+  }
 }
 
 .ui.calendar .ui.table tr th,
